--- a/src/_components/testimonial.html
+++ b/src/_components/testimonial.html
@@ -222,7 +222,7 @@ $lapis-lazuli: #215B7Fff; */
       <div class="div1 eachdiv">
         <div class="userdetails">
           <div class="imgbox">
-            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-daniel.png" alt="">
+            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-daniel.png" alt="Angelina Profile">
           </div>
           <div class="detbox">
             <p class="name">Angelina</p>
@@ -238,7 +238,7 @@ $lapis-lazuli: #215B7Fff; */
       <div class="div2 eachdiv">
         <div class="userdetails">
           <div class="imgbox">
-            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-jonathan.png" alt="">
+            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-jonathan.png" alt="Kelly Profile">
           </div>
           <div class="detbox">
             <p class="name dark">S Kelly</p>
@@ -254,7 +254,7 @@ $lapis-lazuli: #215B7Fff; */
       <div class="div3 eachdiv">
         <div class="userdetails">
           <div class="imgbox">
-            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-kira.png" alt="">
+            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-kira.png" alt="Kendra Profile">
           </div>
           <div class="detbox">
             <p class="name dark">Kendra</p>
@@ -270,7 +270,7 @@ $lapis-lazuli: #215B7Fff; */
       <div class="div4 eachdiv">
         <div class="userdetails">
           <div class="imgbox">
-            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-jeanette.png" alt="">
+            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-jeanette.png" alt="Queen Profile">
           </div>
           <div class="detbox">
             <p class="name dark">Queen</p>
@@ -286,7 +286,7 @@ $lapis-lazuli: #215B7Fff; */
       <div class="div5 eachdiv">
         <div class="userdetails">
           <div class="imgbox">
-            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-patrick.png" alt="">
+            <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-patrick.png" alt="Carolna Profile">
           </div>
           <div class="detbox">
             <p class="name dark">Carolina</p>
