--- a/src/_components/testimonial.html
+++ b/src/_components/testimonial.html
@@ -231,7 +231,7 @@ $lapis-lazuli: #215B7Fff; */
         </div>
         <div class="review">
           <h4>I had no idea what to expect, but even if I had known, I couldn't have imagined how perfect it would actually turn out to be.</h4>
-        <p>“They helped guide the development of the relationship I have with my son's adoptive parents- I love that they educate everyone they work with about open adoption arrangements. I get to chat with forever mom and see new pictures of my boy every week. Sandi really tailors the process at Brighter to focus on us  bio moms- if I had to choose just one word to describe my experience it would be 'empowering' ”</p>
+        <p>“They helped guide the development of the relationship I have with my son's adoptive parents- I love that they educate everyone they work with about open adoption arrangements. I get to chat with forever mom and see new pictures of my boy every week. sandiProf really tailors the process at Brighter to focus on us  bio moms- if I had to choose just one word to describe my experience it would be 'empowering' ”</p>
         </div>
       </div>
       <!-- div2 -->
@@ -246,7 +246,7 @@ $lapis-lazuli: #215B7Fff; */
           </div>
         </div>
         <div class="review">
-          <h4>Sandi is truly a Mother of Mothers.</h4>
+          <h4>sandiProf is truly a Mother of Mothers.</h4>
         <p>“Housing, financial help, well-informed health care, a birthing plan and counseling was all included. You choose which family gets blessed with your sweet babe, and its with great respect and care that your choices are honored. ”</p>
         </div>
       </div>
@@ -295,7 +295,7 @@ $lapis-lazuli: #215B7Fff; */
         </div>
         <div class="review dark">
           <h4>You are all angels in my eyes sent from heaven. Thank you all soooooooo much!</h4>
-        <p>“  Sandi goes out of her way to make sure that everyone understands the process before and after the adoption is complete. She is the most loving and caring person i have ever met and has become truly like a second mother to me and i mean that. i never knew such wonderful and caring people existed until i came to Brighter Adoptions. Going through an adoption is not easy at all but i was blessed to have found Brighter Adoption to make the process much easier. ”</p>
+        <p>“  sandiProf goes out of her way to make sure that everyone understands the process before and after the adoption is complete. She is the most loving and caring person i have ever met and has become truly like a second mother to me and i mean that. i never knew such wonderful and caring people existed until i came to Brighter Adoptions. Going through an adoption is not easy at all but i was blessed to have found Brighter Adoption to make the process much easier. ”</p>
         </div>
       </div>
     </div>
